# discovery_X

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.toml  discovery.md  docker-compose.yml  litellm.config.example.yaml  scope.example.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  findings.tsx  main.tsx  styles.css
frontend/src/pages/: Config.tsx  Dashboard.tsx  Graph.tsx  History.tsx  Login.tsx  ScanDetail.tsx
scripts/: publish-github.sh
src/: config.rs  engine.rs  events.rs  graph.rs  main.rs  orchestrator.rs  render.rs  scanmanager.rs  scope.rs  state.rs  task.rs  types.rs
src/ai/: contract.rs  mod.rs  openai_compat.rs
src/web/: api.rs  assets.rs  auth.rs  mod.rs  state.rs
src/workers/: crawl.rs  dns.rs  feeds.rs  fingerprint.rs  http.rs  jsparse.rs  mod.rs
